# ccminer

./: .gitignore  Dockerfile  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  README.txt  aclocal.m4  algos.h  api-example.php  api.c  api.cpp  bench.cpp  bignum.cpp  bignum.hpp  bitslice_transformations_quad.cu  blake2b.cu  blake32.cu  build.cmd  build.sh  ccminer.conf  ccminer.cpp  ccminer.sln  ccminer.vcxproj  ccminer.vcxproj.filters  compat.h  config.sh  config.status  configure  configure.ac  configure.sh  cpu-miner.c  cpuminer-config.h  cpuminer-config.h.in  crc32.c  cuda.cpp  cuda.cu  cuda_blake512.cu  (+62 more)
.deps/: ccminer-blake.Po  ccminer-bmw.Po  ccminer-cpu-miner.Po  ccminer-groestl.Po  ccminer-hefty1.Po  ccminer-jh.Po  ccminer-keccak.Po  ccminer-scrypt.Po  ccminer-sha2.Po  ccminer-skein.Po  ccminer-util.Po
.github/workflows/: docker-image.yml
Algo256/: blake256.cu  blake2s.cu  bmw.cu  cuda_blake256.cu  cuda_bmw.cu  cuda_bmw256.cu  cuda_cubehash256.cu  cuda_fugue256.cu  cuda_groestl256.cu  cuda_keccak256.cu  cuda_keccak256_sm3.cu  cuda_skein256.cu  decred.cu  keccak256.cu  vanilla.cu
Debug/: ccminer.vcxprojResolveAssemblyReference.cache
JHA/: cuda_jha_compactionTest.cu  cuda_jha_keccak512.cu  jackpotcoin.cu  jha.cu
api/: index.php  local-sample.php  summary.pl  websocket.htm
autom4te.cache/: output.1  requests  traces.0  traces.1
compat/: Makefile  Makefile.in  bignum_ssl10.hpp  ccminer-config.h  winansi.c
compat/getopt/: getopt_long.c
compat/jansson/: .gitignore  Makefile  Makefile.am  Makefile.in  configure.ac  dump.c  jansson.h  jansson_config.h  jansson_private_config.h.in  strbuffer.c  utf.c  utf.h
compat/nvapi/: NVAPI.url  nvHLSLExtns.h  nvHLSLExtnsInternal.h  nvShaderExtnEnums.h  nvapi.h  nvapi_ccminer.h  nvapi_lite_common.h  nvapi_lite_d3dext.h  nvapi_lite_salend.h  nvapi_lite_salstart.h  nvapi_lite_sli.h  nvapi_lite_stereo.h
compat/pthreads/: pthread.h  pthread_barrier.hpp
crypto/: cl_aes.cuh  cn_aes.cuh  cn_blake.cuh  cn_groestl.cuh  cn_jh.cuh  cn_keccak.cuh  cn_skein.cuh  cryptolight-core.cu  cryptolight-cpu.cpp  cryptolight.cu  cryptolight.h  cryptonight-core.cu  cryptonight-cpu.cpp  cryptonight-extra.cu  cryptonight.cu  cryptonight.h  cuda_cryptonight_core.cu  cuda_cryptonight_extra.cu  int128_c.h  mman.c  mman.h  oaes_config.h  oaes_lib.cpp  oaes_lib.h  wildkeccak-cpu.cpp  wildkeccak.cu  wildkeccak.h  xmr-rpc.cpp  xmr-rpc.h
equi/: cuda_equi.cu  eqcuda.hpp  equi-stratum.cpp  equi.cpp  equihash.cpp  equihash.h
ethash/: ethash.cu  ethash_cu_miner_kernel.h  etherpc.cpp  keccak.cuh
heavy/: bastion.cu  cuda_bastion.cu  cuda_blake512.cu  cuda_combine.cu  cuda_groestl512.cu  cuda_hefty1.cu  cuda_keccak512.cu  cuda_sha256.cu  heavy.cu  heavy.h
keccak/: cuda_keccak256.cu  keccak256.cu
lbry/: cuda_lbry_merged.cu  cuda_ripemd160.cu  cuda_sha256_lbry.cu  cuda_sha512_lbry.cu  lbry.cu
lyra2/: Lyra2.c  Lyra2.h  Lyra2Z.c  Lyra2Z.h  Sponge.c  allium.cu  cuda_lyra2.cu  cuda_lyra2Z.cu  cuda_lyra2Z_sm5.cuh  cuda_lyra2_sm2.cuh  cuda_lyra2_sm5.cuh  cuda_lyra2_vectors.h  cuda_lyra2v2.cu  cuda_lyra2v2_sm3.cuh  cuda_lyra2v3.cu  cuda_lyra2v3_sm3.cuh  lyra2RE.cu  lyra2REv2.cu  lyra2REv3.cu  lyra2Z.cu
neoscrypt/: cuda_neoscrypt.cu  cuda_vectors.h  neoscrypt-cpu.c  neoscrypt.c  neoscrypt.cpp  neoscrypt.h
phi/: cuda_phi2.cu  cuda_phi2_cubehash512.cu  phi.cu  phi2.cu
pluck/: cuda_pluck.cu  pluck.cu
quark/: animecoin.cu  cuda_bmw512.cu  cuda_bmw512_30.cu  cuda_bmw512_sm3.cuh  cuda_checkhash.cu  cuda_jh512.cu  cuda_quark.h  cuda_quark_blake512.cu  cuda_quark_blake512_sp.cuh  cuda_quark_checkhash.cu  cuda_quark_compactionTest.cu  cuda_quark_groestl512.cu  cuda_quark_groestl512_sm2.cuh  cuda_quark_groestl512_sm20.cu  cuda_quark_keccak512.cu  cuda_skein512.cu  cuda_skein512_sp.cuh  cuda_vector_uint2x4.h  groestl_functions_quad.h  groestl_simple.cuh  groestl_transf_quad.h  nist5.cu  quarkcoin.cu
qubit/: deep.cu  doom.cu  luffa.cu  qubit.cu  qubit_luffa512.cu
res/: ccminer.rc  resource.h
scrypt/: blake.cu  fermi_kernel.cu  fermi_kernel.h  keccak.cu  kepler_kernel.cu  kepler_kernel.h  nv_kernel.cu  nv_kernel.h  nv_kernel2.cu  nv_kernel2.h  salsa_kernel.cu  salsa_kernel.h  scrypt-jane.h  sha2.c  sha256.cu  test_kernel.cu  test_kernel.h  titan_kernel.cu  titan_kernel.h
sha256/: cuda_sha256d.cu  cuda_sha256q.cu  cuda_sha256t.cu  sha256d.cu  sha256q.cu  sha256t.cu
sia/: sia-rpc.cpp  sia.cu
skunk/: cuda_skunk.cu  cuda_skunk_streebog.cu  skein_header.h  skunk.cu
sph/: Lyra2.c  Sponge.c  Sponge.h  blake.c  blake2b.c  blake2s.c  blake2s.h  haval_helper.c  neoscrypt.c  ripemd.c  sha2.c  sha2big.c  shabal.c  sph_blake.h  sph_ripemd.h  sph_sha2.c  sph_shabal.h  sph_tiger.h  sph_whirlpool.h  streebog.c  tiger.c  whirlpool.c
tribus/: cuda_echo512_aes.cuh  cuda_echo512_final.cu  tribus.cu
x11/: bitcore.cu  c11.cu  cuda_streebog.cu  cuda_streebog_maxwell.cu  cuda_x11.h  cuda_x11_aes.cu  cuda_x11_cubehash512.cu  cuda_x11_echo.cu  cuda_x11_luffa512.cu  cuda_x11_luffa512_Cubehash.cu  cuda_x11_shavite512.cu  cuda_x11_simd512.cu  cuda_x11_simd512_func.cuh  cuda_x11_simd512_sm2.cuh  exosis.cu  fresh.cu  phi.cu  s3.cu  sib.cu  simd_functions.cu  streebog_arrays.cuh  timetravel.cu  veltor.cu  x11.cu  x11evo.cu
x12/: x12.cu
x13/: cuda_haval512.cu  cuda_hsr_sm3.cu  cuda_m7_sha256.cu  cuda_mul.cu  cuda_mul2.cu  cuda_ripemd160.cu  cuda_sha512.cu  cuda_shabal512.cu  cuda_tiger192.cu  cuda_whirlpool512.cu  cuda_x13_fugue512.cu  cuda_x13_hamsi512.cu  fresh.cu  goalcoin.cu  hsr.cu  m7.cu  m7_keccak512.cu  sm3.c  sm3.h  whirlcoin.cu  whirlpool.cu  x13.cu  x14.cu  x15.cu  x17.cu
x15/: cuda_whirlpool_tables.cuh  cuda_whirlpoolx.cu  cuda_x14_shabal512.cu  cuda_x15_whirlpool.cu  cuda_x15_whirlpool_sm3.cu  whirlcoin.cu  whirlpool.cu  whirlpoolx.cu  x14.cu  x15.cu
x16/: cuda_x16.h  cuda_x16_echo512.cu  cuda_x16_echo512_64.cu  cuda_x16_fugue512.cu  cuda_x16_shabal512.cu  cuda_x16_simd512_80.cu  x16r.cu  x16s.cu
x16r/: cuda_x16r.h  x16r.cu  x16s.cu
x17/: cuda_x17_haval256.cu  cuda_x17_haval512.cu  cuda_x17_sha512.cu  hmq17.cu  sonoa.cu  x17.cu
(+14 files in other folders)
